test/should_not_compile/fixity.sml
infix X;
infixr Y;
a X b Y c;
